style: remove visual padding gap between fixed transparent navbar and hero

--- a/src/index.css
+++ b/src/index.css
@@ -248,7 +248,6 @@
 
   .site-main {
     width: 100%;
-    padding-top: 96px;
   }
 
   .page {
